--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,40 @@ h1 {
     padding: 20px 0;
     line-height: 100%;
 }
-.instructions {
+.container {
     width: 680px;
+    margin: 6% auto;
     max-width: 96%;
+    border-radius: 10px;
+    overflow: hidden;
+}
+#input {
+    background: rgba(0,0,0,0.5);
+    padding: 20px;
+}
+#input .output {
+    color: #fff;
+    font-size: 16px;
+    font-family: monospace;
+}
+.instructions {
     background: rgba(255,255,255,1);
     padding: 42px;
-    margin: 10% auto;
-    border-radius: 10px;
+}
+.inputs {
+    display: flex;
+}
+.inputs input {
+    width: 100%;
+    font-size: 28px;
+    text-align: center;
+    color: rgba(0,0,0,0.7);
+    border: 0;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 40px;
+    font-family: monospace;
+    outline: 0;
 }
 .md {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -65,35 +92,6 @@ h1 {
 .md p {
     font-size: 16px;
     margin: 0 0 16px;
-}
-#input {
-    position: relative;
-    width: 680px;
-    max-width: 96%;
-    background: rgba(0,0,0,0.5);
-    padding: 20px;
-    margin: 10% auto;
-    border-radius: 10px;
-}
-#input .output {
-    color: #fff;
-    font-size: 16px;
-    font-family: monospace;
-}
-.inputs {
-    display: flex;
-}
-.inputs input {
-    width: 100%;
-    font-size: 28px;
-    text-align: center;
-    color: rgba(0,0,0,0.7);
-    border: 0;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 40px;
-    font-family: monospace;
-    outline: 0;
 }
 #color {
     flex: 6;
